Fixed the letter spacing bug

--- a/packages/molecule-ui-styles/src/_maps.scss
+++ b/packages/molecule-ui-styles/src/_maps.scss
@@ -234,9 +234,9 @@ $list-style-types: disc circle decimal lower-alpha lower-roman upper-alpha
 
 $letter-spacing: (
   harder: -0.05,
-  hard: -0.1,
+  hard: -0.01,
   normal: 0,
-  soft: 0.1,
+  soft: 0.01,
   softer: 0.05,
 );
 
